--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
-/*************************************************
-    GENERAL STYLES
- *************************************************/
+/*
+#######################################
+GENERAL STYLES
+########################################
+ */
 *,
 *::before,
 *::after {
@@ -41,9 +43,11 @@ img {
     max-width: 100%;
 }
 
-/************************************************
-    UTILITIES
- ************************************************/
+/*
+#######################################
+UTILITIES
+########################################
+ */
 
 /* LAYOUT */
 .container {
@@ -66,9 +70,11 @@ img {
     text-align: center;
 }
 
-/************************************************
-    SITE SECTIONS
- ************************************************/
+/*
+#######################################
+SITE SOLUTIONS
+########################################
+ */
 
 /* HEADER */
 .site-header {
@@ -124,6 +130,15 @@ img {
     margin-bottom: 2.5rem;
 }
 
-/************************************************
+/*
+#######################################
     SOLUZIONE RESPONSIVE
- ************************************************/
+########################################
+ */
+
+ @media screen and (max-width: 480px) {
+    .col {
+        flex-direction: row;
+    }
+ }
+ 
