--- a/css/style.css
+++ b/css/style.css
@@ -136,9 +136,101 @@ SITE SOLUTIONS
 ########################################
  */
 
- @media screen and (max-width: 480px) {
-    .col {
-        flex-direction: row;
+ @media all and (max-width: 768px) {
+    .container {
+        width: 100%;
     }
  }
+
+ @media screen and (max-width: 480px) {
+
+    /*BASI*/
+    h1 {
+        margin-bottom: 3rem;
+        font-size: 2.5rem;
+    }
+    
+    h2 {
+        margin-bottom: 2.5rem;
+        font-size: 2rem;
+        color: #fffffe;
+    }
+    
+    h3 {
+        margin-bottom: 1rem;
+        font-size: 1.5rem;
+    }
+    
+    img {
+        max-width: 100%;
+
+    }
+
+    /* LAYOUT */
+    .container {
+        width: 100%;
+        margin: 0 auto;
+        padding: 0 20px;
+    }
+
+    .row {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .col {
+        padding: 0 7px;
+    }
+
+    /* TEXT */
+    .text-center {
+        text-align: center;
+    }
+    /* HEADER */
+    .site-header {
+        margin-top: 21px;
+    }
+
+    /* LESSONS SECTION */
+    .lessons .col {
+        width: 100%;
+    }
+
+    .lessons .col img {
+        height: 84px;
+        margin: 7px;
+    }
+
+    /* STEPS SECTION */
+    .steps {
+        margin: 21px 0;
+        padding: 21px 0;
+    }
+    .steps .col {
+        width: 100%;
+    }
+
+    .steps .col img {
+        height: 200px;
+        margin: 1rem 0;
+    }
+
+    /* WHY US SECTION */
+    .why-us {
+        margin-bottom: 21px;
+    }
+    .why-us .col-left {
+        width: 100%;
+    }
+
+    .why-us .col-right {
+        width: 100%;
+    }
+
+    .why-us li {
+        list-style: none;
+        margin-bottom: 17px;
+    }
+}
+ 
  
